# splitwise-mcp

./: .env.example  .gitignore  README.md  plan-splitwiseMcpServer.prompt.md  pyproject.toml  render.yaml
splitwise_mcp/: app.py  client.py  config.py  server.py
splitwise_mcp/models/: __init__.py  expense.py
splitwise_mcp/tools/: __init__.py  comments.py  expenses.py  friends.py  groups.py  notifications.py  other.py  users.py
src/splitwise_mcp/: __init__.py  app.py
src/splitwise_mcp/models/: comment.py  common.py  friend.py  group.py  notification.py  user.py
src/splitwise_mcp/tools/: comments.py  expenses.py  friends.py  groups.py  notifications.py  other.py  users.py
src/splitwise_mcp/utils/: formatters.py
